tests/pp-fail/bad_if.fl.0.exp
Error: bad_if.fl(1,5): Expected primary preprocessor expression
